@@ -1,4 +1,7 @@
 2007-08-14 Yusei
+* Add utility scripts to collect translation messages.
+
+2007-08-14 Yusei
 * Add glossary module.
 
 2007-02-13 Kevin
